--- a/.gitignore
+++ b/.gitignore
@@ -42,11 +42,40 @@ Thumbs.db
 .yarnrc
 .yarn-integrity
 
-# Editor directories and files
-.idea/
-.vscode/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# dependencies
+/node_modules
+/.pnp
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+next-env.d.ts
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
